added id and class for the html

--- a/src/about.html
+++ b/src/about.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>About Me</title>
 </head>
 <body>
-    <header>
-        <h1>About Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <nav>
+    <header id="main-header">
+        <h1 class="header-title">About Moti Leggese</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
+        <nav class="main-nav">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="skills.html" class="nav-link">Skills</a></li>
+                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
-        <h2>Introduction</h2>
-        <img src="images/intro.jpg" alt="Moti Leggese">
-        <p>
+    <section id="introduction-section">
+        <h2 class="section-title">Introduction</h2>
+        <img src="images/intro.jpg" alt="Moti Leggese" class="section-image">
+        <p class="section-text">
             Hello! I'm Moti Leggese, a third-year software engineering student on a journey to explore the vast world of technology. Welcome to my digital space, where I share my enthusiasm for coding and problem-solving.
         </p>
     </section>
 
-    <section>
-        <h2>Background</h2>
-        <p>
+    <section id="background-section">
+        <h2 class="section-title">Background</h2>
+        <p class="section-text">
             My educational journey took root in Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. I successfully completed my high school education and graduated in 2022.
-            </p>
-            <img src="images/my_photo.jpg" alt="Moti Leggese">
-            <p> These years of academic exploration laid the foundation for my passion for learning and set the stage for my pursuit of a degree in software engineering.
+        </p>
+        <img src="images/my_photo.jpg" alt="Moti Leggese" class="section-image">
+        <p class="section-text">
+            These years of academic exploration laid the foundation for my passion for learning and set the stage for my pursuit of a degree in software engineering.
         </p>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer id="main-footer">
+        <p class="footer-text">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
