--- a/src/contact.html
+++ b/src/contact.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Contact</title>
 </head>
 <body>
-    <header>
-        <h1>Moti Leggese</h1>
+    <header id="main-header">
+        <h1 class="header-title">Moti Leggese</h1>
     </header>
-    <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
 
-    <nav>
+    <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
+
+    <nav class="main-nav">
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="home.html" class="nav-link">Home</a></li>
+            <li><a href="about.html" class="nav-link">About</a></li>
+            <li><a href="skills.html" class="nav-link">Skills</a></li>
+            <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
-    <section>
-        <h2>Contact Form</h2>
-        <form action="#" method="post">
+    <section id="contact-form-section">
+        <h2 class="section-title">Contact Form</h2>
+        <form action="#" method="post" class="contact-form">
             <label for="fullName">Full Name:</label>
             <input type="text" name="fullName" required>
 
@@ -41,44 +42,44 @@
         </form>
     </section>
 
-    <section>
-        <h2>Direct Contact</h2>
-        <p>
+    <section id="direct-contact-section">
+        <h2 class="section-title">Direct Contact</h2>
+        <p class="section-text">
             Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.
         </p>
-        <address>
-            <p>Email: <a href="mailto:motileggese@gmail.com">motileggese@gmail.com</a></p>
+        <address class="direct-contact-address">
+            <p>Email: <a href="mailto:motileggese@gmail.com" class="email-link">motileggese@gmail.com</a></p>
             <p>Phone: +251922426411</p>
         </address>
     </section>
 
     <!-- Address Section -->
-    <section>
-        <h2>Address</h2>
-        <p>
+    <section id="address-section">
+        <h2 class="section-title">Address</h2>
+        <p class="section-text">
             If you prefer traditional mail or want to drop by, here's my address:
         </p>
-        <p>
+        <p class="section-text">
             Ghana St., Addis Ababa, Ethiopia
         </p>
     </section>
 
     <!-- Social Media Section -->
-    <section>
-        <h2>Social Media</h2>
-        <p>
+    <section id="social-media-section">
+        <h2 class="section-title">Social Media</h2>
+        <p class="section-text">
             Connect with me on social media for the latest updates and to stay in the loop:
         </p>
-        <ul>
-            <li><a href="https://t.me/motiition" target="_blank">Telegram</a></li>
-            <img src="images/telegram.jpg" alt="Telegram Logo">
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">X</a></li>
-            <img src="images/x.jpeg" alt="X Logo">
+        <ul class="social-media-list">
+            <li><a href="https://t.me/motiition" target="_blank" class="social-media-link">Telegram</a></li>
+            <img src="images/telegram.jpg" alt="Telegram Logo" class="social-media-logo">
+            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="social-media-link">X</a></li>
+            <img src="images/x.jpeg" alt="X Logo" class="social-media-logo">
         </ul>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer id="main-footer">
+        <p class="footer-text">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
