--- a/src/skills.html
+++ b/src/skills.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Skills</title>
 </head>
 <body>
-    <header>
-        <h1>Main Heading</h1>
-        <img src="images/avatar.jpg" alt="Avatar Image">
-        <img src="images/se_skills.jpg" alt="Skills Image">
-        <nav>
+    <header id="main-header">
+        <h1 class="header-title">Main Heading</h1>
+        <img src="images/avatar.jpg" alt="Avatar Image" class="header-avatar">
+        <img src="images/se_skills.jpg" alt="Skills Image" class="header-background">
+        <nav class="main-nav">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="skills.html" class="nav-link">Skills</a></li>
+                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="section1">
-        <h2>Applications</h2>
-        <img src="images/skills.jpg" alt="Skills Showcase Image">
-        <p>        
+        <h2 class="section-title">Applications</h2>
+        <img src="images/skills.jpg" alt="Skills Showcase Image" class="section-image">
+        <p class="section-text">
             Welcome to my skills showcase! As a third-year software engineering student, I've cultivated a diverse set of skills to bring creative and efficient solutions to the table. Below, you'll find a snapshot of my expertise across various domains in the field. From web development to database management, programming proficiency, mobile app development, version control, Agile methodology, and cybersecurity measures, each skill reflects my commitment to excellence and innovation.
         </p>
     </section>
 
     <section id="section2">
-        <h2>List of Skills</h2>
-        <table>
+        <h2 class="section-title">List of Skills</h2>
+        <table class="skills-table">
             <tr>
               <th>Applications I've Developed</th>
               <th>Description</th>
@@ -68,8 +68,8 @@
         </table>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer id="main-footer">
+        <p class="footer-text">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
