--- a/src/volunteer_activity.html
+++ b/src/volunteer_activity.html
@@ -3,47 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Volunteer Activity</title>
 </head>
 <body>
-    <header>
-        <h1>Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <img src="images/download.jpg" alt="Download Image">
-        <nav>
+    <header id="main-header">
+        <h1 class="header-title">Moti Leggese</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
+        <img src="images/download.jpg" alt="Download Image" class="header-background">
+        <nav class="main-nav">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="skills.html" class="nav-link">Skills</a></li>
+                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="contribution">
-            <h2>Contribution</h2>
-            <video src="videos/what_i_have_done.mp4" controls></video>
-            <p>I actively contribute to positive change through hands-on projects and impactful events. My efforts are quantifiable, ranging from direct assistance to individuals and successful project implementation. Whether raising funds for crucial causes or leading initiatives, my commitment is evident in tangible results. Each contribution reflects my dedication to fostering a supportive environment for those in need.</p>
+            <h2 class="section-title">Contribution</h2>
+            <video src="videos/what_i_have_done.mp4" controls class="section-video"></video>
+            <p class="section-text">I actively contribute to positive change through hands-on projects and impactful events. My efforts are quantifiable, ranging from direct assistance to individuals and successful project implementation. Whether raising funds for crucial causes or leading initiatives, my commitment is evident in tangible results. Each contribution reflects my dedication to fostering a supportive environment for those in need.</p>
         </section>  
 
         <section id="emotionalCare">
-            <h2>Emotional Care</h2>
-            <img src="images/Screenshot-2023-04-25-at-9.53.37-AM.png" alt="Emotional Care Image">
-            <p>Emotional care is a crucial aspect of our outreach efforts. It involves creating a supportive environment that acknowledges and addresses the emotional well-being of individuals facing challenging circumstances. My approach focuses on offering empathy, understanding, and a comforting presence to those navigating difficult situations. Through tailored emotional care initiatives, I strive to uplift spirits, provide solace, and foster a sense of resilience among the individuals and families I serve. My goal is to contribute not only to their physical well-being but also to their emotional and mental health, recognizing the interconnected nature of overall wellness.</p>
+            <h2 class="section-title">Emotional Care</h2>
+            <img src="images/Screenshot-2023-04-25-at-9.53.37-AM.png" alt="Emotional Care Image" class="section-image">
+            <p class="section-text">Emotional care is a crucial aspect of our outreach efforts. It involves creating a supportive environment that acknowledges and addresses the emotional well-being of individuals facing challenging circumstances. My approach focuses on offering empathy, understanding, and a comforting presence to those navigating difficult situations. Through tailored emotional care initiatives, I strive to uplift spirits, provide solace, and foster a sense of resilience among the individuals and families I serve. My goal is to contribute not only to their physical well-being but also to their emotional and mental health, recognizing the interconnected nature of overall wellness.</p>
         </section>
 
         <section id="experience">
-            <h2>Experience</h2>
-            <img src="images/ph_24999_90586.jpg" alt="Experience Image">
-            <p>I have worked to return households to financial self-sufficiency through enrollment in the formal banking system, basic income and small business grants, and support for additional skills or small business training. I also serve families living in extreme poverty who also suffer from diseases such as HIV/AIDS, cervical cancer, and tuberculosis. I want to see individuals and families restored to health and able to meet their economic needs without outside help.</p>
+            <h2 class="section-title">Experience</h2>
+            <img src="images/ph_24999_90586.jpg" alt="Experience Image" class="section-image">
+            <p class="section-text">I have worked to return households to financial self-sufficiency through enrollment in the formal banking system, basic income and small business grants, and support for additional skills or small business training. I also serve families living in extreme poverty who also suffer from diseases such as HIV/AIDS, cervical cancer, and tuberculosis. I want to see individuals and families restored to health and able to meet their economic needs without outside help.</p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer id="main-footer">
+        <p class="footer-text">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
