corrected the structure

--- a/src/home.html
+++ b/src/home.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Home</title>
+    <link rel="stylesheets" href="css/styles.css">
+    <title>Welcome to Moti Leggese's Website</title>
 </head>
+
 <body>
-    <header id="main-header">
-        <h1 class="header-title">Welcome to Moti Leggese's Website</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
-        <img src="images/home.jpg" alt="homepage Background" class="header-background">
-        <nav class="main-nav">
+    <header class="flex-container">
+        <h1>Welcome to Moti Leggese's Website</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
+        <img src="images/home.jpg" alt="Homepage Background">
+        <nav class="flex-item">
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
@@ -22,70 +24,75 @@
         </nav>
     </header>
 
-    <section id="about-section">
-        <h2 class="section-title">About Me</h2>
-        <img src="images/about.jpg" alt="About Me Image" class="section-image">
-        <p class="section-text">
-            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
+    <section class="flex-container">
+        <h2 class="flex-item">About Me</h2>
+        <img src="images/about.jpg" alt="About Me Image" class="flex-item">
+        <p class="flex-item">
+            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more
+            about my skills, projects, and contributions.
         </p>
     </section>
 
-    <section id="projects-section">
-        <h2 class="section-title">Featured Projects</h2>
-        <img src="images/featured.jpg" alt="Featured projects" class="section-image">
-        <p class="section-text">
-            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
+    <section class="flex-container">
+        <h2 class="flex-item">Featured Projects</h2>
+        <img src="images/featured.jpg" alt="Featured Projects" class="flex-item">
+        <p class="flex-item">
+            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects
+            my commitment to innovation and excellence.
         </p>
-        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank" class="section-link">Check my Projects on GitHub</a>
+        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank" class="flex-item">Check my Projects on
+            GitHub</a>
     </section>
 
-    <section id="skills-section">
-        <h2 class="section-title">Skills and Expertise</h2>
-        <img src="images/core_skills.jpg" alt="core skill" class="section-image">
-        <p class="section-text">
-            Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
+    <section class="flex-container">
+        <h2 class="flex-item">Skills and Expertise</h2>
+        <img src="images/core_skills.jpg" alt="Core Skills" class="flex-item">
+        <p class="flex-item">
+            Explore my skills and expertise in software engineering. From web development to database management, I bring a
+            diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world
+            challenges.
         </p>
-        <p class="section-text">
-            Visit my <a href="skills.html" class="section-link">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
-        </p>
-    </section>
-
-    <section id="volunteer-section">
-        <h2 class="section-title">Volunteer Activity and Contributions</h2>
-        <img src="images/volunteer.jpg" alt="volunteer_activity" class="section-image">
-        <p class="section-text">
-            Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html" class="section-link">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
-        </p>
-        <p class="section-text">
-            Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
+        <p class="flex-item">
+            Visit my <a href="skills.html" class="nav-link">Skills page</a> for a detailed breakdown of the technologies
+            and tools I work with.
         </p>
     </section>
 
-    <section id="pulse-section">
-        <h2 class="section-title">Project Pulse</h2>
-        <img src="images/pulse.jpg" alt="pulse" class="section-image">
-        <p class="section-text">
-            Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
-        </p>
-        <ul class="section-list">
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="section-link">Exciting News on X Platform</a></li>
-            <li><a href="https://t.me/motiition" target="_blank" class="section-link">Join me on Telegram for Live Updates</a></li>
+    <section class="flex-container">
+        <h2 class="flex-item">Volunteer Activity and Contributions</h2>
+        <p class="flex-item">Discover my commitment to making a positive impact beyond the world of software. In the <a
+                href="volunteer_activity.html" class="nav-link">Volunteer Activity</a> section, I share experiences in
+            contributing to positive change through hands-on projects and events.</p>
+        <p class="flex-item">Learn about my efforts in providing emotional care and making meaningful contributions to
+            communities in need. Read about specific projects and initiatives that reflect my dedication to social
+            responsibility.</p>
+    </section>
+
+    <section class="flex-container">
+        <h2 class="flex-item">Project Pulse</h2>
+        <p class="flex-item">Stay updated with my latest news and announcements. Whether it's a new project,
+            collaboration, or an exciting development in the tech world, you'll find it here.</p>
+        <ul class="flex-item">
+            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="nav-link">Exciting
+                    News on X Platform</a></li>
+            <li><a href="https://t.me/motiition" target="_blank" class="nav-link">Join me on Telegram for Live
+                    Updates</a></li>
         </ul>
     </section>
 
-    <section id="contact-section">
-        <h2 class="section-title">Get in Touch</h2>
-        <p class="section-text">
-            Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html" class="section-link">Contact page</a> for direct contact information, my address, and social media links.
-        </p>
-        <p class="section-text">
-            Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
-        </p>
-        <a href="contact.html" class="section-link">Contact Me</a>
+    <section class="flex-container">
+        <h2 class="flex-item">Get in Touch</h2>
+        <p class="flex-item">Interested in collaborating or learning more about my work? Feel free to reach out! Visit
+            the <a href="contact.html" class="nav-link">Contact page</a> for direct contact information, my address, and
+            social media links.</p>
+        <p class="flex-item">Whether you have a project in mind or just want to connect, I'm always open to new
+            opportunities and collaborations.</p>
+        <a href="contact.html" class="nav-link flex-item">Contact Me</a>
     </section>
 
-    <footer id="main-footer">
-        <p class="footer-text">&copy; 2023 Moti Leggese</p>
+    <footer class="flex-container">
+        <p class="flex-item">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
+
 </html>
