--- a/src/about.html
+++ b/src/about.html
@@ -7,10 +7,10 @@
     <title>About Me</title>
 </head>
 <body>
-    <header id="main-header">
-        <h1 class="header-title">About Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
-        <nav class="main-nav">
+    <header>
+        <h1>About Moti Leggese</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
+        <nav>
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
@@ -21,27 +21,27 @@
         </nav>
     </header>
 
-    <section id="introduction-section">
-        <h2 class="section-title">Introduction</h2>
-        <img src="images/intro.jpg" alt="Moti Leggese" class="section-image">
-        <p class="section-text">
-            Hello! I'm Moti Leggese, a third-year software engineering student on a journey to explore the vast world of technology. Welcome to my digital space, where I share my enthusiasm for coding and problem-solving.
+    <section id="section-introduction" class="flex-item">
+        <h2>Introduction</h2>
+        <img src="images/intro.jpg" alt="Moti Leggese">
+        <p>
+            Welcome to my digital space! I'm Moti Leggese, a passionate third-year software engineering student on a journey to explore the vast world of technology.
         </p>
     </section>
 
-    <section id="background-section">
-        <h2 class="section-title">Background</h2>
-        <p class="section-text">
-            My educational journey took root in Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. I successfully completed my high school education and graduated in 2022.
+    <section id="section-background" class="flex-item">
+        <h2>Background</h2>
+        <p>
+            My educational journey began at Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. After successfully completing my high school education, I embarked on my current path of pursuing a degree in software engineering.
         </p>
-        <img src="images/my_photo.jpg" alt="Moti Leggese" class="section-image">
-        <p class="section-text">
-            These years of academic exploration laid the foundation for my passion for learning and set the stage for my pursuit of a degree in software engineering.
+        <img src="images/my_photo.jpg" alt="Moti Leggese">
+        <p>
+            These years of academic exploration laid the foundation for my passion for learning and set the stage for my continued journey in the field of software engineering.
         </p>
     </section>
 
-    <footer id="main-footer">
-        <p class="footer-text">&copy; 2023 Moti Leggese</p>
+    <footer>
+        <p>&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
