--- a/src/contact.html
+++ b/src/contact.html
@@ -7,13 +7,12 @@
     <title>Contact</title>
 </head>
 <body>
-    <header id="main-header">
-        <h1 class="header-title">Moti Leggese</h1>
+    <header>
+        <h1>Moti Leggese</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
     </header>
 
-    <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="header-avatar">
-
-    <nav class="main-nav">
+    <nav>
         <ul>
             <li><a href="home.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About</a></li>
@@ -23,63 +22,55 @@
         </ul>
     </nav>
 
-    <section id="contact-form-section">
-        <h2 class="section-title">Contact Form</h2>
-        <form action="#" method="post" class="contact-form">
-            <label for="fullName">Full Name:</label>
-            <input type="text" name="fullName" required>
+    <main>
+        <section id="contactForm" class="flex-item">
+            <h2>Contact Form</h2>
+            <form action="#" method="post">
+                <label for="fullName">Full Name:</label>
+                <input type="text" name="fullName" required>
 
-            <label for="address">Address:</label>
-            <textarea name="address" rows="3" required></textarea>
+                <label for="address">Address:</label>
+                <textarea name="address" rows="3" required></textarea>
 
-            <label for="phoneNumber">Phone Number:</label>
-            <input type="tel" name="phoneNumber" required>
+                <label for="phoneNumber">Phone Number:</label>
+                <input type="tel" name="phoneNumber" required>
 
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
+                <label for="email">Email:</label>
+                <input type="email" name="email" required>
 
-            <input type="submit" value="Submit">
-        </form>
-    </section>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
 
-    <section id="direct-contact-section">
-        <h2 class="section-title">Direct Contact</h2>
-        <p class="section-text">
-            Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.
-        </p>
-        <address class="direct-contact-address">
-            <p>Email: <a href="mailto:motileggese@gmail.com" class="email-link">motileggese@gmail.com</a></p>
-            <p>Phone: +251922426411</p>
-        </address>
-    </section>
+        <section id="directContact" class="flex-item">
+            <h2>Direct Contact</h2>
+            <p>Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.</p>
+            <address>
+                <p>Email: <a href="mailto:motileggese@gmail.com">motileggese@gmail.com</a></p>
+                <p>Phone: +251922426411</p>
+            </address>
+        </section>
 
-    <!-- Address Section -->
-    <section id="address-section">
-        <h2 class="section-title">Address</h2>
-        <p class="section-text">
-            If you prefer traditional mail or want to drop by, here's my address:
-        </p>
-        <p class="section-text">
-            Ghana St., Addis Ababa, Ethiopia
-        </p>
-    </section>
+        <section id="address" class="flex-item">
+            <h2>Address</h2>
+            <p>If you prefer traditional mail or want to drop by, here's my address:</p>
+            <p>Ghana St., Addis Ababa, Ethiopia</p>
+        </section>
 
-    <!-- Social Media Section -->
-    <section id="social-media-section">
-        <h2 class="section-title">Social Media</h2>
-        <p class="section-text">
-            Connect with me on social media for the latest updates and to stay in the loop:
-        </p>
-        <ul class="social-media-list">
-            <li><a href="https://t.me/motiition" target="_blank" class="social-media-link">Telegram</a></li>
-            <img src="images/telegram.jpg" alt="Telegram Logo" class="social-media-logo">
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="social-media-link">X</a></li>
-            <img src="images/x.jpeg" alt="X Logo" class="social-media-logo">
-        </ul>
-    </section>
+        <section id="socialMedia" class="flex-item">
+            <h2>Social Media</h2>
+            <p>Connect with me on social media for the latest updates and to stay in the loop:</p>
+            <ul>
+                <li><a href="https://t.me/motiition" target="_blank">Telegram</a></li>
+                <img src="images/telegram.jpg" alt="Telegram Logo">
+                <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">X</a></li>
+                <img src="images/x.jpeg" alt="X Logo">
+            </ul>
+        </section>
+    </main>
 
-    <footer id="main-footer">
-        <p class="footer-text">&copy; 2023 Moti Leggese</p>
+    <footer>
+        <p>&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
 </html>
